# calcifer

./: Makefile  README.md  pyproject.toml
calciferpi/: cli.py  settings.py
calciferpi/dht/: __init__.py  services.py
calciferpi/display/: __init__.py  services.py
calciferpi/displays/: __init__.py  services.py
calciferpi/readings/: __init__.py  services.py
calciferpi/server/: app.py  nodes.py
calciferpi/server/templates/: index.html  reading.html
